@@ -91,7 +91,7 @@
       (while (eq (process-status proc) 'run)
         (sit-for 0.1))
       (should (string= compilation-directory dir))
-      (let ((proc (rustic-recompile)))
+      (let ((proc (rustic-recompile nil)))
         (while (eq (process-status proc) 'run)
           (sit-for 0.1)))
       (should (string= (car compilation-arguments) "cargo fmt"))
@@ -108,7 +108,7 @@
       (while (eq (process-status proc) 'run)
         (sit-for 0.1))
       (should (string= compilation-directory dir))
-      (let ((proc (rustic-recompile)))
+      (let ((proc (rustic-recompile nil)))
         (while (eq (process-status proc) 'run)
           (sit-for 0.1)))
       (should (string= (car compilation-arguments) "cargo build"))
@@ -127,7 +127,7 @@
         (while (eq (process-status proc) 'run)
           (sit-for 0.01))
         (should (= 0 (process-exit-status proc)))
-        (let ((p (rustic-recompile)))
+        (let ((p (rustic-recompile nil)))
           (while (eq (process-status proc) 'run)
             (sit-for 0.1))
           (should (= 0 (process-exit-status p))))))))
